--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>welcome</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti in tempora temporibus dolorem deserunt dolor asperiores.</p>
-    <p>This is edited by Shreya</p>
+    <p>This is edited by Shreya(dropdown)</p>
 </body>
 </html>
